fix: fix moving in portal 포탈 움직임 수정했습니다.